meja/tests/list_constructor_override.stderr
File "tests/list_constructor_override.meja", line 9, characters 13-17:
Error: Unbound constructor true.
