meja/tests/list_constructor_override.meja
type nil;

type rec t('a) = [] : t(nil) | ( :: ) ('hd, t('tl)) : t('hd -> 'tl);

let x = [];

let y = ( :: ) (12, []);

let z = 1 :: true :: () :: [];

let z = [1, true, ()];

module A = {
  type u('a, 'b) = [] ('a, 'b);

  let x = [] (12, true);
};
